flexed header and footer and fixed spacing

--- a/css/index.css
+++ b/css/index.css
@@ -68,24 +68,22 @@ p {
     line-height: 1.4;
 }
 
-/*holds top everything*/ .container {
-    display: block;
-    /* width: 800px; */
-    margin: 0 auto;
-    font-size: 1rem; 
-    padding-bottom: 20px;  
+/*holds top everything*/ 
+.container {
+    display:inline-flexbox;
+    margin-top: 1rem;
 }
-/*inside .containter*/ header {
+/*inside .containter*/ 
+header {
     margin-bottom: 30px;
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: baseline;
 }
-/*inside header*/   .links {
+/*inside header*/   
+.links {
     width: 100%;
-    padding-top: 2  px;
     margin-right: 40px;
-    display:inline-block;
     color: black;
 }
 a:link {
@@ -113,6 +111,7 @@ a:active{
     justify-content: space-evenly;
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
+    margin-top:-5px;
 }
 
 .top-content .text-container {
@@ -131,7 +130,7 @@ a:active{
 .middle-content h2 {
     padding: 0 2%;
     margin-bottom: 0;
-   
+   margin-top: -20px;
 }
 
 .middle-content .boxesrow1 {
@@ -141,7 +140,7 @@ a:active{
 
 .middle-content .boxesrow1 {
     /* height: 100px; */
-    margin: 20px 2.5%;
+    
     color: white;
     display: flex;
     align-items: center;
@@ -257,6 +256,7 @@ a:active{
     display: flex;
     margin-bottom: 20px;
     justify-content: space-around;
+    margin-top: -15px;
 }
 
 .bottom-content .text-container {
@@ -266,24 +266,30 @@ a:active{
 .bottom-content .text-container:last-child {
     padding-right: 0;
 }
+.text-container {
+    padding: 0 1rem;
+}
 
 footer {
-    width: 775px;
+    display: flex;
+    align-items: flex-start;
+    width: 805px;
     background: black;
 }
 
 footer nav {
-    width: 60%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 2%;
+    /* width: 60%; */
+    /* display: flex; */
+    
+    padding: 2%;
+   
     font-size: 14px;
 }
 
 footer nav .foots {
     color: white;
     text-decoration: none;
+    padding-right: 2.5rem;
 }
 
 /*---about page styles---*/
